# hello-world.rs

./: Cargo.toml  Dockerfile  LICENSE  LICENSE.rs  Makefile  PKGBUILD  README.md  hello-world.rs-buildscript  x.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
src/: main.rs
translations/: es.json  fr.json  hi.json  hr.json  la.json  lt.json  pt.json  ru.json  se.json  sk.json
