[package]
name = "hello-world"
version = "0.1.0"
authors = ["mTvare6 <mTvare6@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
amethyst          = { version = "0.15.3", features = ["empty"] }
aseprite          = "0.1.3"
ash               = "0.33.3+1.2.186"
backtrace         = "0.3.60"
bytes             = "1.1.0"
cash              = "0.1.5"
chashmap          = "2.2.2"
chrono            = "0.4.19"
chrono-tz         = "0.6.0"
clap              = "3.0.0-beta.2"
cookie            = "0.15.1"
cookie_store      = "0.15.0"
crate             = "0.0.2"
crossbeam = "0.8"
crossterm         = "0.17"
crypto            = "0.3.0"
cssparser         = "0.28.1"
data-encoding     = "2.3.2"
data-url          = "0.1.0"
diesel            = "1.4.8"
diesel_migrations = "1.4.0"
distill           = "0.0.3"
dotenv            = "0.15.0"
fern              = "0.6.0"
fluent-bundle     = "0.15.1"
french-numbers    = "1.1.2"
futures = "0.3"
gfx               = "0.18.2"
gl                = "0.6.0"
glam              = "0.17.3"
glfw              = "0.42.0"
gtk               = "0.14.0"
handlebars        = "4.1.0"
html5ever         = "0.25.1"
hyper             = "0.13.8"
idna              = "0.2.3"
job_scheduler     = "1.2.1"
jsonwebtoken      = "7.2.0"
legion            = "0.4.0"
lettre            = "0.10.0-rc.3"
libsqlite3-sys    = "0.22.2"
log               = "0.4.14"
markup            = "0.12.2"
markup5ever_rcdom = "0.1.0"
money             = "0.1.0"
mp4parse          = "0.11.5"
multipart         = "0.18.0"
nix               = "0.20.0"
nom               = "7"
num = "0.4"
num_cpus          = "1.13.0"
num-derive        = "0.3.3"
num-traits        = "0.2.14"
once_cell         = "1.8.0"
openssl           = "0.10.36"
paste             = "1.0.5"
pico-args         = "0.4.2"
percent-encoding  = "2.1.0"
plist             = "1.2.1" #macos support! with memory safety
pretty_assertions = "0.7.2"
r_i18n            = "1.0.1"
rand              = "0.8.4"
regex             = "1.5.4"
reqwest           = "0.11.4"
ring              = "0.16.20"
rmpv              = "0.4.7"
security          = "0.1.0"
serenity          = "0.10"
tensorflow        = "0.17.0"
u2f               = "0.2.0"
url               = "2.2.2"
uuid              = "0.8.2"
uwuify = "^0.2"
serde             = "1.0.130"
serde_json        = "1.0.68"
tempfile = "3"
textwrap          = "0.14.2"
time              = "0.3.3"
tracing           = "0.1.28"
walkdir = "2"
webauthn-rs       = "=0.3.0-alpha.9"
webdriver         = "0.43.1"
winapi            = "0.3.9"
ws                = "0.9.1"
x11               = "2.19.1"
yubico            = "0.10.0"
